# retro-image

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
include/retro/: image.h  template.h
include/retro/image/: bitmap.h  color.h  color.inl  colors.h  export.h
include/retro/template/: export.h
src/: CMakeLists.txt
src/image/: bitmap.cpp  pch.cpp  pch.h
src/template/: pch.h
tests/: CMakeLists.txt
tests/src/: bitmap.test.cpp  color.test.cpp  test_color.cpp
